# copa_recommender_prototype

./: INSTALL_WINDOWS.txt  NOTES  README.md  pyproject.toml
data/: attrib_yr_mo_2017_07.csv  attrib_yr_mo_2017_08.csv  temp_long_lat_height.csv
src/: .newlib_monthly.py.swp  copa_config.py  copalib.py  explore.py  explore_lib.py  newlib_monthly.py  rankfm_copa_single_run.py
